--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: #101010;
+    /*background-color: #cbccce;*/
     font-family: 'Raleway', sans-serif;
 
 }
@@ -7,3 +8,6 @@ body{
 nav-link{
     color: white;
 }
+
+
+
