--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,10 +1,18 @@
-body{
+body {
     background-color: #101010;
     /*background-color: #cbccce;*/
     font-family: 'Raleway', sans-serif;
 }
 
-nav-link{
+nav-link {
+    color: white;
+}
+
+h1 {
+    font-size: 100px;
+}
+
+div {
     color: white;
 }
 
@@ -104,7 +112,6 @@ Generic layout (demo looks)
 }
 
 
-
 .articles {
     display: grid;
     max-width: 1200px;
@@ -118,6 +125,7 @@ Generic layout (demo looks)
     article {
         container: card/inline-size;
     }
+
     .article-body p {
         display: none;
     }
@@ -129,14 +137,17 @@ Generic layout (demo looks)
         grid-template-columns: 100px 1fr;
         gap: 16px;
     }
+
     .article-body {
         padding-left: 0;
     }
+
     figure {
         width: 100%;
         height: 100%;
         overflow: hidden;
     }
+
     figure img {
         height: 100%;
         aspect-ratio: 1;
@@ -152,4 +163,71 @@ Generic layout (demo looks)
     position: absolute;
     white-space: nowrap;
     width: 1px;
+}
+
+
+#tl {
+    margin-top: 70px;
+    margin-left: 10px;
+
+
+}
+
+.timeline {
+    max-width: 800px;
+    border-left: 2px solid #ccc;
+    padding-left: 10px;
+}
+
+.event {
+    margin-bottom: 60px;
+}
+
+.date {
+    top: 0;
+    left: -150px;
+    width: 140px;
+    text-align: right;
+    font-size: 18px;
+    font-weight: bold;
+}
+
+
+#apropos {
+    margin-top: 400px;
+    color: white;
+    font-size: 50px;
+}
+
+.maformation {
+    margin-top: 50px;
+    font-size: 40px;
+}
+
+.icon {
+    height: 50px;
+    width: 50px;
+}
+
+#name {
+    margin-top: 200px;
+}
+
+#contact {
+    margin-top: 200px;
+}
+
+#gallia {
+    height: 210px;
+    width: 400px;
+}
+
+#galliapage{
+    height: 500px;
+    width: 1000px;
+}
+
+#themispage{
+    height: 500px;
+    width: 1000px;
 }
