--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 
         body {
-            background-color: black;
+            background-color: #212529;
             color: white;
             font-family: 'Arial', sans-serif;
             margin: 0;
@@ -41,6 +41,7 @@
             max-width: 50%; /* Ensure the image doesn't exceed the container width */
             max-height: 50%; /* Ensure the image doesn't exceed the container height */
             display: block; /* Remove default inline behavior */
+            margin-left: 20%;
         }
         
 
