--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,9 @@
         body {
             background-color: #212529;
             color: white;
-            font-family: 'Arial', sans-serif;
             margin: 0;
             padding: 20px;
+            font-family: Arial, Helvetica, sans-serif;
         }
 
         h2 {
@@ -49,3 +49,4 @@
         a{
             color: aliceblue;
         }
+
